(library
 (name ppx)
 (public_name ppx)
 (libraries
  ocaml-compiler-libs.common
  compiler-libs.common
  ocaml-compiler-libs.shadow
  ocaml-migrate-parsetree
  ppx.ast_deprecated
  ppx.bootstrap
  ppx.print_diff
  ppx_derivers
  ppx_traverse_builtins
  stdppx)
 (flags (:standard -open Ocaml_shadow -safe-string))
 (preprocess (pps ppx_bootstrap_runner))
 (ppx.driver
  (main       Ppx.Driver.standalone)
  (replaces   ocaml-migrate-parsetree)
  (flags      (-corrected-suffix %{corrected-suffix} -diff-cmd - -dump-ast))
  (lint_flags (-corrected-suffix %{corrected-suffix} -diff-cmd - -null    ))))

(cinaps
 (files *.ml *.mli)
 (libraries ppxlib_cinaps_helpers))
