(library
 (name astlib_first_draft_test)
 (public_name astlib_first_draft.test)
 (libraries
  astlib_first_draft.ast
  astlib_first_draft
  base_quickcheck
  expect_test_helpers_kernel.expect_test_helpers_base
  sexplib)
 (flags (:standard -open Ocaml_shadow -safe-string))
 (preprocess (pps ppx_jane))
 (inline_tests))

(cinaps
 (files *.ml *.mli)
 (libraries astlib_first_draft.test_cinaps))
