(library
 (name viewast)
 (public_name ppx_view.ast)
 (libraries
  compiler-libs.common
  ocaml-compiler-libs.shadow
  ocaml-compiler-libs.common
  ocaml-migrate-parsetree
  viewlib)
 (flags :standard -open Ocaml_shadow)
 (preprocess (pps ppx_view_rewriter)))

(rule
 (targets parseview.mli parseview.ml ast_viewer.mli ast_viewer.ml)
 (deps
  (glob_files ../generator/ast_viewer_const_ml{,i}-src)
  (glob_files ../generator/ast_viewer_const_exp_ml{,i}-src)
  (glob_files ../ast407/stdlib/*.mli)
  (glob_files ../ast407/parsing/*.mli))
 (action  (run ../generator/generator.exe -ocaml-where-path ../ast407
           -data-path ../generator
           -dest-path .)))
